--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   permission_handler: ^10.2.0
   geolocator: ^9.0.2
+  flutter_compass: ^0.7.0
+  font_awesome_flutter: ^10.2.1
+  url_launcher: ^6.1.6
+  package_info_plus: ^3.0.1
 
 dev_dependencies:
   flutter_test:
